# ROSCO

./: .gitignore  INTEGRATION_TEST.md  README.md  ROSCO_BUG_REPORT.md  TRANSLATION_TIPS.md  vit.yaml
Examples/: DISCON_awc.IN  DISCON_filters.IN  DISCON_flp.IN  DISCON_ipc.IN  vit_sim.py
baseline_arrays/: scenario_1.npz  scenario_10.npz  scenario_11.npz  scenario_13.npz  scenario_14.npz  scenario_15.npz  scenario_16.npz  scenario_19.npz  scenario_2.npz  scenario_21.npz  scenario_24.npz  scenario_25.npz  scenario_26.npz  scenario_3.npz  scenario_5.npz  scenario_6.npz  scenario_7.npz  scenario_8.npz  scenario_9.npz
kernel/ActiveWakeControl/: ActiveWakeControl.0.0.1  ActiveWakeControl.0.0.10  ActiveWakeControl.0.0.11  ActiveWakeControl.0.0.12  ActiveWakeControl.0.0.13  ActiveWakeControl.0.0.14  ActiveWakeControl.0.0.15  ActiveWakeControl.0.0.16  ActiveWakeControl.0.0.17  ActiveWakeControl.0.0.18  ActiveWakeControl.0.0.19  ActiveWakeControl.0.0.2  ActiveWakeControl.0.0.20  ActiveWakeControl.0.0.21  ActiveWakeControl.0.0.22  ActiveWakeControl.0.0.23  ActiveWakeControl.0.0.3  ActiveWakeControl.0.0.4  ActiveWakeControl.0.0.5  ActiveWakeControl.0.0.6  ActiveWakeControl.0.0.7  ActiveWakeControl.0.0.8  ActiveWakeControl.0.0.9  Constants.f90  Constants.f90.kgen  ControllerBlocks.f90  ControllerBlocks.f90.kgen  Controllers.f90  Controllers.f90.kgen  Filters.f90  Filters.f90.kgen  Functions.f90  Functions.f90.kgen  Makefile  ROSCO_Types.f90  ROSCO_Types.f90.kgen  SysIFL.f90  SysIFL.f90.kgen  kernel_driver.f90  kernel_driver.f90.kgen  (+7 more)
kernel/AeroDynTorque/: AeroDynTorque.0.0.1  AeroDynTorque.0.0.10  AeroDynTorque.0.0.11  AeroDynTorque.0.0.12  AeroDynTorque.0.0.13  AeroDynTorque.0.0.14  AeroDynTorque.0.0.15  AeroDynTorque.0.0.16  AeroDynTorque.0.0.17  AeroDynTorque.0.0.18  AeroDynTorque.0.0.19  AeroDynTorque.0.0.2  AeroDynTorque.0.0.20  AeroDynTorque.0.0.3  AeroDynTorque.0.0.4  AeroDynTorque.0.0.5  AeroDynTorque.0.0.6  AeroDynTorque.0.0.7  AeroDynTorque.0.0.8  AeroDynTorque.0.0.9  Constants.f90  Constants.f90.kgen  ControllerBlocks.f90  ControllerBlocks.f90.kgen  Filters.f90  Filters.f90.kgen  Functions.f90  Functions.f90.kgen  Makefile.kgen  ROSCO_Types.f90  ROSCO_Types.f90.kgen  SysIFL.f90  SysIFL.f90.kgen  kernel_driver.f90  kernel_driver.f90.kgen  kgen_statefile.lst  performancedata_view_t.h  vit_bridge_interp2d.f90  vit_kernel_callees.h
kernel/CableControl/: CableControl.0.0.1  CableControl.0.0.10  CableControl.0.0.11  CableControl.0.0.12  CableControl.0.0.13  CableControl.0.0.14  CableControl.0.0.15  CableControl.0.0.16  CableControl.0.0.17  CableControl.0.0.18  CableControl.0.0.19  CableControl.0.0.2  CableControl.0.0.20  CableControl.0.0.21  CableControl.0.0.3  CableControl.0.0.4  CableControl.0.0.5  CableControl.0.0.6  CableControl.0.0.7  CableControl.0.0.8  CableControl.0.0.9  Constants.f90  Constants.f90.kgen  ControllerBlocks.f90  ControllerBlocks.f90.kgen  Controllers.f90  Controllers.f90.kgen  DISCON.F90  ExtControl.f90  ExtControl.f90.kgen  Filters.f90  Filters.f90.kgen  Functions.f90  Functions.f90.kgen  ROSCO_Types.f90  ROSCO_Types.f90.kgen  SysIFL.f90  SysIFL.f90.kgen  core  kernel_driver.f90  (+4 more)
kernel/ColemanTransform/: ColemanTransform.0.0.1  ColemanTransform.0.0.10  ColemanTransform.0.0.11  ColemanTransform.0.0.12  ColemanTransform.0.0.13  ColemanTransform.0.0.14  ColemanTransform.0.0.15  ColemanTransform.0.0.16  ColemanTransform.0.0.17  ColemanTransform.0.0.18  ColemanTransform.0.0.19  ColemanTransform.0.0.2  ColemanTransform.0.0.20  ColemanTransform.0.0.3  ColemanTransform.0.0.4  ColemanTransform.0.0.5  SysIFL.f90  (+21 more)
rosco/controller/: CMakeLists.txt
rosco/controller/src/: ControllerBlocks.f90  Controllers.f90  ExtControl.f90  Filters.f90  Functions.f90  ROSCO_IO.f90  ROSCO_Types.f90  ReadSetParameters.f90  activewakecontrol.cpp  aerodyntorque.cpp  cablecontrol.cpp  checkinputs.cpp  colemantransform.cpp  colemantransforminverse.cpp  computevariablessetpoints.cpp  debug.cpp  discon.cpp  extcontroller.cpp  flapcontrol.cpp  floatingfeedback.cpp  floatingfeedback_cpp.cpp  foreaftdamping.cpp  foreaftdamping_cpp.cpp  hpfilter.cpp  hpfilter_cpp.cpp  identity.cpp  interp1d.cpp  interp2d.cpp  ipc.cpp  lpfilter.cpp  lpfilter_cpp.cpp  notchfilter.cpp  notchfilterslopes.cpp  notchfilterslopes_cpp.cpp  picontroller.cpp  pidcontroller.cpp  piicontroller.cpp  pitchcontrol.cpp  pitchsaturation.cpp  powercontrolsetpoints.cpp  (+43 more)
rosco/controller/src/ControllerBlocks/: computevariablessetpoints.cpp  pitchsaturation.cpp  powercontrolsetpoints.cpp  refspeedexclusion.cpp  setpointsmoother.cpp  shutdown.cpp  startup.cpp  statemachine.cpp  windspeedestimator.cpp
rosco/controller/src/Controllers/: activewakecontrol.cpp  cablecontrol.cpp  flapcontrol.cpp  floatingfeedback.cpp  foreaftdamping.cpp  ipc.cpp  picontroller.cpp  pidcontroller.cpp  piicontroller.cpp  pitchcontrol.cpp  rescontroller.cpp  structuralcontrol.cpp  variablespeedcontrol.cpp  yawratecontrol.cpp
rosco/controller/src/Filters/: hpfilter.cpp  lpfilter.cpp  notchfilter.cpp  notchfilterslopes.cpp  prefiltermeasuredsignals.cpp  seclpfilter.cpp  seclpfilter_vel.cpp
rosco/controller/src/Functions/: aerodyntorque.cpp  colemantransform.cpp  colemantransforminverse.cpp  identity.cpp  interp1d.cpp  interp2d.cpp  ratelimit.cpp  sigma.cpp  unwrap.cpp
rosco/controller/src/IO/: debug.cpp  extcontroller.cpp  readrestartfile.cpp  updatezeromq.cpp  writerestartfile.cpp
rosco/controller/src/ReadSetParameters/: checkinputs.cpp  readavrswap.cpp  readcontrolparameterfilesub.cpp  readcpfile.cpp  setparameters.cpp
rosco/controller/src/include/: restart_fields.h  rosco_constants.h  vit_types.h
scripts/: debug_test.sh  extract_all.sh  integrate_all.sh  prepare_commit.sh  reset_to_clean.sh  reset_to_upstream.sh  verify_all.sh
translations/: discon.cpp  vit_types.h
upstream_arrays/: scenario_1.npz  scenario_10.npz  scenario_12.npz  scenario_16.npz  scenario_17.npz  scenario_2.npz  scenario_20.npz  scenario_22.npz  scenario_23.npz  scenario_27.npz  scenario_3.npz  scenario_5.npz  scenario_6.npz  scenario_7.npz  scenario_8.npz  scenario_9.npz
(+1578 files in other folders)
